parser/parser.output
Terminals which are not used

   "eof"
   T_divider
   T_operator
   '/'
   '%'


State 74 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 76 conflicts: 2 shift/reduce
State 111 conflicts: 5 shift/reduce
State 112 conflicts: 5 shift/reduce
State 115 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 117 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 ld: /* empty */
    3   | local_def ld

    4 func_def: header ld block

    5 header: "fun" T_id '(' fd ')' ':' ret_type

    6 fd: /* empty */
    7   | ';' fpar_def fd
    8   | fpar_def fd

    9 fpar_def: "ref" T_id td ':' fpar_type
   10         | T_id td ':' fpar_type

   11 td: /* empty */
   12   | ',' T_id td

   13 data_type: "int"
   14          | "char"

   15 cd: /* empty */
   16   | '[' T_int_const ']' cd

   17 type: data_type cd

   18 ret_type: data_type
   19         | "nothing"

   20 fpard: /* empty */
   21      | '[' T_int_const ']' fpard

   22 fpar_type: data_type '[' ']' fpard
   23          | data_type fpard

   24 local_def: func_def
   25          | func_decl
   26          | var_def

   27 func_decl: header ';'

   28 var_def: "var" T_id td ':' type ';'

   29 stmt: ';'
   30     | l_value "<-" expr ';'
   31     | block
   32     | func_call ';'
   33     | "if" cond "then" stmt "else" stmt
   34     | "if" cond "then" stmt
   35     | "while" cond "do" stmt
   36     | "return" expr ';'
   37     | "return" ';'

   38 stmtd: /* empty */
   39      | stmt stmtd

   40 block: '{' stmtd '}'

   41 exprc: /* empty */
   42      | ',' expr exprc

   43 func_call: T_id '(' expr exprc ')'
   44          | T_id '(' ')'

   45 l_value: T_id
   46        | T_string_const
   47        | l_value '[' expr ']'

   48 expr: T_int_const
   49     | T_char_const
   50     | l_value
   51     | '(' expr ')'
   52     | func_call
   53     | '+' expr
   54     | '-' expr
   55     | expr '+' expr
   56     | expr '-' expr
   57     | expr '*' expr
   58     | expr "div" expr
   59     | expr "mod" expr

   60 cond: '(' cond ')'
   61     | "not" cond
   62     | cond "or" cond
   63     | cond "and" cond
   64     | expr '=' expr
   65     | expr '#' expr
   66     | expr '<' expr
   67     | expr '>' expr
   68     | expr "<=" expr
   69     | expr ">=" expr


Terminals, with rules where they appear

$end (0) 0
'#' (35) 65
'%' (37)
'(' (40) 5 43 44 51 60
')' (41) 5 43 44 51 60
'*' (42) 57
'+' (43) 53 55
',' (44) 12 42
'-' (45) 54 56
'/' (47)
':' (58) 5 9 10 28
';' (59) 7 27 28 29 30 32 36 37
'<' (60) 66
'=' (61) 64
'>' (62) 67
'[' (91) 16 21 22 47
']' (93) 16 21 22 47
'{' (123) 40
'}' (125) 40
error (256)
"eof" (258)
"and" (259) 63
"char" (260) 14
"div" (261) 58
"do" (262) 35
"else" (263) 33
"fun" (264) 5
"if" (265) 33 34
"int" (266) 13
"mod" (267) 59
"not" (268) 61
"nothing" (269) 19
"or" (270) 62
"ref" (271) 9
"return" (272) 36 37
"then" (273) 33 34
"var" (274) 28
"while" (275) 35
"<=" (276) 68
">=" (277) 69
"<-" (278) 30
T_int_const (279) 16 21 48
T_char_const (280) 49
T_id (281) 5 9 10 12 28 43 44 45
T_string_const (282) 46
T_divider (283)
T_operator (284)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
ld (50)
    on left: 2 3, on right: 3 4
func_def (51)
    on left: 4, on right: 1 24
header (52)
    on left: 5, on right: 4 27
fd (53)
    on left: 6 7 8, on right: 5 7 8
fpar_def (54)
    on left: 9 10, on right: 7 8
td (55)
    on left: 11 12, on right: 9 10 12 28
data_type (56)
    on left: 13 14, on right: 17 18 22 23
cd (57)
    on left: 15 16, on right: 16 17
type (58)
    on left: 17, on right: 28
ret_type (59)
    on left: 18 19, on right: 5
fpard (60)
    on left: 20 21, on right: 21 22 23
fpar_type (61)
    on left: 22 23, on right: 9 10
local_def (62)
    on left: 24 25 26, on right: 3
func_decl (63)
    on left: 27, on right: 25
var_def (64)
    on left: 28, on right: 26
stmt (65)
    on left: 29 30 31 32 33 34 35 36 37, on right: 33 34 35 39
stmtd (66)
    on left: 38 39, on right: 39 40
block (67)
    on left: 40, on right: 4 31
exprc (68)
    on left: 41 42, on right: 42 43
func_call (69)
    on left: 43 44, on right: 32 52
l_value (70)
    on left: 45 46 47, on right: 30 47 50
expr (71)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 30 36 42
    43 47 51 53 54 55 56 57 58 59 64 65 66 67 68 69
cond (72)
    on left: 60 61 62 63 64 65 66 67 68 69, on right: 33 34 35 60 61
    62 63


state 0

    0 $accept: . program $end

    "fun"  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3
    header    go to state 4


state 1

    5 header: "fun" . T_id '(' fd ')' ':' ret_type

    T_id  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


state 4

    4 func_def: header . ld block

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7

    $default  reduce using rule 2 (ld)

    ld         go to state 8
    func_def   go to state 9
    header     go to state 10
    local_def  go to state 11
    func_decl  go to state 12
    var_def    go to state 13


state 5

    5 header: "fun" T_id . '(' fd ')' ':' ret_type

    '('  shift, and go to state 14


state 6

    0 $accept: program $end .

    $default  accept


state 7

   28 var_def: "var" . T_id td ':' type ';'

    T_id  shift, and go to state 15


state 8

    4 func_def: header ld . block

    '{'  shift, and go to state 16

    block  go to state 17


state 9

   24 local_def: func_def .

    $default  reduce using rule 24 (local_def)


state 10

    4 func_def: header . ld block
   27 func_decl: header . ';'

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7
    ';'    shift, and go to state 18

    $default  reduce using rule 2 (ld)

    ld         go to state 8
    func_def   go to state 9
    header     go to state 10
    local_def  go to state 11
    func_decl  go to state 12
    var_def    go to state 13


state 11

    3 ld: local_def . ld

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7

    $default  reduce using rule 2 (ld)

    ld         go to state 19
    func_def   go to state 9
    header     go to state 10
    local_def  go to state 11
    func_decl  go to state 12
    var_def    go to state 13


state 12

   25 local_def: func_decl .

    $default  reduce using rule 25 (local_def)


state 13

   26 local_def: var_def .

    $default  reduce using rule 26 (local_def)


state 14

    5 header: "fun" T_id '(' . fd ')' ':' ret_type

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21
    ';'    shift, and go to state 22

    $default  reduce using rule 6 (fd)

    fd        go to state 23
    fpar_def  go to state 24


state 15

   28 var_def: "var" T_id . td ':' type ';'

    ','  shift, and go to state 25

    $default  reduce using rule 11 (td)

    td  go to state 26


state 16

   40 block: '{' . stmtd '}'

    "if"            shift, and go to state 27
    "return"        shift, and go to state 28
    "while"         shift, and go to state 29
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    ';'             shift, and go to state 32
    '{'             shift, and go to state 16

    $default  reduce using rule 38 (stmtd)

    stmt       go to state 33
    stmtd      go to state 34
    block      go to state 35
    func_call  go to state 36
    l_value    go to state 37


state 17

    4 func_def: header ld block .

    $default  reduce using rule 4 (func_def)


state 18

   27 func_decl: header ';' .

    $default  reduce using rule 27 (func_decl)


state 19

    3 ld: local_def ld .

    $default  reduce using rule 3 (ld)


state 20

    9 fpar_def: "ref" . T_id td ':' fpar_type

    T_id  shift, and go to state 38


state 21

   10 fpar_def: T_id . td ':' fpar_type

    ','  shift, and go to state 25

    $default  reduce using rule 11 (td)

    td  go to state 39


state 22

    7 fd: ';' . fpar_def fd

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21

    fpar_def  go to state 40


state 23

    5 header: "fun" T_id '(' fd . ')' ':' ret_type

    ')'  shift, and go to state 41


state 24

    8 fd: fpar_def . fd

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21
    ';'    shift, and go to state 22

    $default  reduce using rule 6 (fd)

    fd        go to state 42
    fpar_def  go to state 24


state 25

   12 td: ',' . T_id td

    T_id  shift, and go to state 43


state 26

   28 var_def: "var" T_id td . ':' type ';'

    ':'  shift, and go to state 44


state 27

   33 stmt: "if" . cond "then" stmt "else" stmt
   34     | "if" . cond "then" stmt

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 53
    cond       go to state 54


state 28

   36 stmt: "return" . expr ';'
   37     | "return" . ';'

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55
    ';'             shift, and go to state 56

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 57


state 29

   35 stmt: "while" . cond "do" stmt

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 53
    cond       go to state 58


state 30

   43 func_call: T_id . '(' expr exprc ')'
   44          | T_id . '(' ')'
   45 l_value: T_id .

    '('  shift, and go to state 59

    $default  reduce using rule 45 (l_value)


state 31

   46 l_value: T_string_const .

    $default  reduce using rule 46 (l_value)


state 32

   29 stmt: ';' .

    $default  reduce using rule 29 (stmt)


state 33

   39 stmtd: stmt . stmtd

    "if"            shift, and go to state 27
    "return"        shift, and go to state 28
    "while"         shift, and go to state 29
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    ';'             shift, and go to state 32
    '{'             shift, and go to state 16

    $default  reduce using rule 38 (stmtd)

    stmt       go to state 33
    stmtd      go to state 60
    block      go to state 35
    func_call  go to state 36
    l_value    go to state 37


state 34

   40 block: '{' stmtd . '}'

    '}'  shift, and go to state 61


state 35

   31 stmt: block .

    $default  reduce using rule 31 (stmt)


state 36

   32 stmt: func_call . ';'

    ';'  shift, and go to state 62


state 37

   30 stmt: l_value . "<-" expr ';'
   47 l_value: l_value . '[' expr ']'

    "<-"  shift, and go to state 63
    '['   shift, and go to state 64


state 38

    9 fpar_def: "ref" T_id . td ':' fpar_type

    ','  shift, and go to state 25

    $default  reduce using rule 11 (td)

    td  go to state 65


state 39

   10 fpar_def: T_id td . ':' fpar_type

    ':'  shift, and go to state 66


state 40

    7 fd: ';' fpar_def . fd

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21
    ';'    shift, and go to state 22

    $default  reduce using rule 6 (fd)

    fd        go to state 67
    fpar_def  go to state 24


state 41

    5 header: "fun" T_id '(' fd ')' . ':' ret_type

    ':'  shift, and go to state 68


state 42

    8 fd: fpar_def fd .

    $default  reduce using rule 8 (fd)


state 43

   12 td: ',' T_id . td

    ','  shift, and go to state 25

    $default  reduce using rule 11 (td)

    td  go to state 69


state 44

   28 var_def: "var" T_id td ':' . type ';'

    "char"  shift, and go to state 70
    "int"   shift, and go to state 71

    data_type  go to state 72
    type       go to state 73


state 45

   61 cond: "not" . cond

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 53
    cond       go to state 74


state 46

   48 expr: T_int_const .

    $default  reduce using rule 48 (expr)


state 47

   49 expr: T_char_const .

    $default  reduce using rule 49 (expr)


state 48

   53 expr: '+' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 75


state 49

   54 expr: '-' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 76


state 50

   51 expr: '(' . expr ')'
   60 cond: '(' . cond ')'

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 77
    cond       go to state 78


state 51

   52 expr: func_call .

    $default  reduce using rule 52 (expr)


state 52

   47 l_value: l_value . '[' expr ']'
   50 expr: l_value .

    '['  shift, and go to state 64

    $default  reduce using rule 50 (expr)


state 53

   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr
   64 cond: expr . '=' expr
   65     | expr . '#' expr
   66     | expr . '<' expr
   67     | expr . '>' expr
   68     | expr . "<=" expr
   69     | expr . ">=" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    "<="   shift, and go to state 81
    ">="   shift, and go to state 82
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    '='    shift, and go to state 86
    '#'    shift, and go to state 87
    '<'    shift, and go to state 88
    '>'    shift, and go to state 89


state 54

   33 stmt: "if" cond . "then" stmt "else" stmt
   34     | "if" cond . "then" stmt
   62 cond: cond . "or" cond
   63     | cond . "and" cond

    "and"   shift, and go to state 90
    "or"    shift, and go to state 91
    "then"  shift, and go to state 92


state 55

   51 expr: '(' . expr ')'

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 93


state 56

   37 stmt: "return" ';' .

    $default  reduce using rule 37 (stmt)


state 57

   36 stmt: "return" expr . ';'
   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ';'    shift, and go to state 94


state 58

   35 stmt: "while" cond . "do" stmt
   62 cond: cond . "or" cond
   63     | cond . "and" cond

    "and"  shift, and go to state 90
    "do"   shift, and go to state 95
    "or"   shift, and go to state 91


state 59

   43 func_call: T_id '(' . expr exprc ')'
   44          | T_id '(' . ')'

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55
    ')'             shift, and go to state 96

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 97


state 60

   39 stmtd: stmt stmtd .

    $default  reduce using rule 39 (stmtd)


state 61

   40 block: '{' stmtd '}' .

    $default  reduce using rule 40 (block)


state 62

   32 stmt: func_call ';' .

    $default  reduce using rule 32 (stmt)


state 63

   30 stmt: l_value "<-" . expr ';'

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 98


state 64

   47 l_value: l_value '[' . expr ']'

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 99


state 65

    9 fpar_def: "ref" T_id td . ':' fpar_type

    ':'  shift, and go to state 100


state 66

   10 fpar_def: T_id td ':' . fpar_type

    "char"  shift, and go to state 70
    "int"   shift, and go to state 71

    data_type  go to state 101
    fpar_type  go to state 102


state 67

    7 fd: ';' fpar_def fd .

    $default  reduce using rule 7 (fd)


state 68

    5 header: "fun" T_id '(' fd ')' ':' . ret_type

    "char"     shift, and go to state 70
    "int"      shift, and go to state 71
    "nothing"  shift, and go to state 103

    data_type  go to state 104
    ret_type   go to state 105


state 69

   12 td: ',' T_id td .

    $default  reduce using rule 12 (td)


state 70

   14 data_type: "char" .

    $default  reduce using rule 14 (data_type)


state 71

   13 data_type: "int" .

    $default  reduce using rule 13 (data_type)


state 72

   17 type: data_type . cd

    '['  shift, and go to state 106

    $default  reduce using rule 15 (cd)

    cd  go to state 107


state 73

   28 var_def: "var" T_id td ':' type . ';'

    ';'  shift, and go to state 108


state 74

   61 cond: "not" cond .
   62     | cond . "or" cond
   63     | cond . "and" cond

    "and"  shift, and go to state 90
    "or"   shift, and go to state 91

    "and"     [reduce using rule 61 (cond)]
    "or"      [reduce using rule 61 (cond)]
    $default  reduce using rule 61 (cond)


state 75

   53 expr: '+' expr .
   55     | expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '*'    shift, and go to state 85

    "div"     [reduce using rule 53 (expr)]
    "mod"     [reduce using rule 53 (expr)]
    $default  reduce using rule 53 (expr)


state 76

   54 expr: '-' expr .
   55     | expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '*'    shift, and go to state 85

    "div"     [reduce using rule 54 (expr)]
    "mod"     [reduce using rule 54 (expr)]
    $default  reduce using rule 54 (expr)


state 77

   51 expr: '(' expr . ')'
   55     | expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr
   64 cond: expr . '=' expr
   65     | expr . '#' expr
   66     | expr . '<' expr
   67     | expr . '>' expr
   68     | expr . "<=" expr
   69     | expr . ">=" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    "<="   shift, and go to state 81
    ">="   shift, and go to state 82
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ')'    shift, and go to state 109
    '='    shift, and go to state 86
    '#'    shift, and go to state 87
    '<'    shift, and go to state 88
    '>'    shift, and go to state 89


state 78

   60 cond: '(' cond . ')'
   62     | cond . "or" cond
   63     | cond . "and" cond

    "and"  shift, and go to state 90
    "or"   shift, and go to state 91
    ')'    shift, and go to state 110


state 79

   58 expr: expr "div" . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 111


state 80

   59 expr: expr "mod" . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 112


state 81

   68 cond: expr "<=" . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 113


state 82

   69 cond: expr ">=" . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 114


state 83

   55 expr: expr '+' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 115


state 84

   56 expr: expr '-' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 116


state 85

   57 expr: expr '*' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 117


state 86

   64 cond: expr '=' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 118


state 87

   65 cond: expr '#' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 119


state 88

   66 cond: expr '<' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 120


state 89

   67 cond: expr '>' . expr

    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 55

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 121


state 90

   63 cond: cond "and" . cond

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 53
    cond       go to state 122


state 91

   62 cond: cond "or" . cond

    "not"           shift, and go to state 45
    T_int_const     shift, and go to state 46
    T_char_const    shift, and go to state 47
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '('             shift, and go to state 50

    func_call  go to state 51
    l_value    go to state 52
    expr       go to state 53
    cond       go to state 123


state 92

   33 stmt: "if" cond "then" . stmt "else" stmt
   34     | "if" cond "then" . stmt

    "if"            shift, and go to state 27
    "return"        shift, and go to state 28
    "while"         shift, and go to state 29
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    ';'             shift, and go to state 32
    '{'             shift, and go to state 16

    stmt       go to state 124
    block      go to state 35
    func_call  go to state 36
    l_value    go to state 37


state 93

   51 expr: '(' expr . ')'
   55     | expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ')'    shift, and go to state 109


state 94

   36 stmt: "return" expr ';' .

    $default  reduce using rule 36 (stmt)


state 95

   35 stmt: "while" cond "do" . stmt

    "if"            shift, and go to state 27
    "return"        shift, and go to state 28
    "while"         shift, and go to state 29
    T_id            shift, and go to state 30
    T_string_const  shift, and go to state 31
    ';'             shift, and go to state 32
    '{'             shift, and go to state 16

    stmt       go to state 125
    block      go to state 35
    func_call  go to state 36
    l_value    go to state 37


state 96

   44 func_call: T_id '(' ')' .

    $default  reduce using rule 44 (func_call)


state 97

   43 func_call: T_id '(' expr . exprc ')'
   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ','    shift, and go to state 126

    $default  reduce using rule 41 (exprc)

    exprc  go to state 127


state 98

   30 stmt: l_value "<-" expr . ';'
   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ';'    shift, and go to state 128


state 99

   47 l_value: l_value '[' expr . ']'
   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    ']'    shift, and go to state 129


state 100

    9 fpar_def: "ref" T_id td ':' . fpar_type

    "char"  shift, and go to state 70
    "int"   shift, and go to state 71

    data_type  go to state 101
    fpar_type  go to state 130


state 101

   22 fpar_type: data_type . '[' ']' fpard
   23          | data_type . fpard

    '['  shift, and go to state 131

    $default  reduce using rule 20 (fpard)

    fpard  go to state 132


state 102

   10 fpar_def: T_id td ':' fpar_type .

    $default  reduce using rule 10 (fpar_def)


state 103

   19 ret_type: "nothing" .

    $default  reduce using rule 19 (ret_type)


state 104

   18 ret_type: data_type .

    $default  reduce using rule 18 (ret_type)


state 105

    5 header: "fun" T_id '(' fd ')' ':' ret_type .

    $default  reduce using rule 5 (header)


state 106

   16 cd: '[' . T_int_const ']' cd

    T_int_const  shift, and go to state 133


state 107

   17 type: data_type cd .

    $default  reduce using rule 17 (type)


state 108

   28 var_def: "var" T_id td ':' type ';' .

    $default  reduce using rule 28 (var_def)


state 109

   51 expr: '(' expr ')' .

    $default  reduce using rule 51 (expr)


state 110

   60 cond: '(' cond ')' .

    $default  reduce using rule 60 (cond)


state 111

   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   58     | expr "div" expr .
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85

    "div"     [reduce using rule 58 (expr)]
    "mod"     [reduce using rule 58 (expr)]
    '+'       [reduce using rule 58 (expr)]
    '-'       [reduce using rule 58 (expr)]
    '*'       [reduce using rule 58 (expr)]
    $default  reduce using rule 58 (expr)


state 112

   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr
   59     | expr "mod" expr .

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85

    "div"     [reduce using rule 59 (expr)]
    "mod"     [reduce using rule 59 (expr)]
    '+'       [reduce using rule 59 (expr)]
    '-'       [reduce using rule 59 (expr)]
    '*'       [reduce using rule 59 (expr)]
    $default  reduce using rule 59 (expr)


state 113

   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr
   68 cond: expr "<=" expr .

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85

    $default  reduce using rule 68 (cond)


state 114

   55 expr: expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr
   69 cond: expr ">=" expr .

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85

    $default  reduce using rule 69 (cond)


state 115

   55 expr: expr . '+' expr
   55     | expr '+' expr .
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . "div" expr
   59     | expr . "mod" expr

    "div"  shift, and go to state 79
    "mod"  shift, and go to state 80
    '*'    shift, and go to state 85

    "div"     [reduce using rule 55 (expr)]
    "mod"     [reduce using rule 55 (expr)]
    $default  reduce using rule 55 (expr)

